[2.19.x] DDF-6013 G-5272 Allow users to remove themselves from the sharing list (#6014)

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/search-form-interactions/search-form-interactions.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/search-form-interactions/search-form-interactions.less
@@ -57,6 +57,12 @@
   }
 }
 
+@{customElementNamespace}search-form-interactions.is-not-shared-template {
+  > .interaction-remove-share {
+    display: none;
+  }
+}
+
 @{customElementNamespace}search-form-interactions.is-not-editable-template {
   > .interaction-trash {
     display: none;
