--- a/ui/packages/catalog-ui-search/src/main/webapp/component/query-status/query-status-row.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/query-status/query-status-row.less
@@ -1,6 +1,10 @@
 @{customElementNamespace}query-status-row {
-  .fa-warning {
+  .error {
     color: @negative-color !important;
+  }
+
+  .warning {
+    color: @warning-color !important;
   }
 
   .status-filter {
