Adds in status to lazy query results object
 - Adapts existing views to use the new status.  Refactors hooks a bit to ease use.

--- a/ui/packages/catalog-ui-search/src/main/webapp/styles/mixins.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/styles/mixins.less
@@ -202,7 +202,8 @@
       border-bottom: 1px solid fade(@contrastColor, 10%);
     }
   }
-  @{customElementNamespace}table {
+  @{customElementNamespace}table,
+  .intrigue-table {
     th + th,
     td + td {
       border-left: 1px solid fade(@contrastColor, 5%);
