Updates histogram to work with new result format

--- a/ui/packages/catalog-ui-search/src/main/webapp/styles/mixins.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/styles/mixins.less
@@ -149,7 +149,7 @@
       border-left: 1px solid fade(@contrastColor, 40%);
     }
   }
-  @{customElementNamespace}histogram {
+  .plotly-histogram {
     .hovertext rect,
     .hovertext path,
     .axistext path {
