--- a/ui/packages/catalog-ui-search/src/main/webapp/styles/mixins.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/styles/mixins.less
@@ -149,7 +149,7 @@
       border-left: 1px solid fade(@contrastColor, 40%);
     }
   }
-  @{customElementNamespace}histogram {
+  .plotly-histogram {
     .hovertext rect,
     .hovertext path,
     .axistext path {
@@ -202,7 +202,8 @@
       border-bottom: 1px solid fade(@contrastColor, 10%);
     }
   }
-  @{customElementNamespace}table {
+  @{customElementNamespace}table,
+  .intrigue-table {
     th + th,
     td + td {
       border-left: 1px solid fade(@contrastColor, 5%);
