DDF-6131 Change style to allow text wrapping
modified row.less changed white-space field of td to normal from nowrap

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/visualization/table/row.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/visualization/table/row.less
@@ -1,7 +1,7 @@
 @{customElementNamespace}result-row {
   td {
     padding: @minimumSpacing @mediumSpacing;
-    white-space: nowrap;
+    white-space: normal;
     cursor: pointer;
     vertical-align: top; // for IE10
     position: relative;
