DDF-UI-261 Add control to add a new visual tab from the tabs similar to a browser

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/visualization-selector/dropdown.visualization-selector.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/visualization-selector/dropdown.visualization-selector.hbs
@@ -11,8 +11,4 @@
  *
  **/
  --}}
-<span class="dropdown-label">
-    Add Visual
-</span>
-<span class="dropdown-icon fa fa-television">
-</span>
+<span class="dropdown-icon fa fa-plus"></span>
