--- a/ui/packages/catalog-ui-search/src/main/webapp/component/golden-layout/golden-layout.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/golden-layout/golden-layout.less
@@ -4,6 +4,10 @@
     display: none;
   }
 
+  .empty-add-visualization {
+    display: none;
+  }
+
   .lm_maximised .lm_header,
   .lm_goldenlayout,
   .lm_item,
@@ -331,6 +335,10 @@
 
 @{customElementNamespace}golden-layout.is-empty {
   // might be useful to make it clearer to the user in the future when they're in this mode
+  .empty-add-visualization {
+    display: block;
+    width: @minimumButtonSize;
+  }
 }
 
 //interim styles (delete me later, after we add layout switching etc.)
