DDF-UI-273 Theme Zoom Percentage Formatting Issues

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/lightbox/result/lightbox.result.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/lightbox/result/lightbox.result.less
@@ -10,7 +10,7 @@
     height: 100%;
 
     .is-enum.is-editing {
-      max-height: 50px;
+      max-height: ~'calc(@{minimumButtonSize} + 1.5rem)';
     }
   }
 }
