--- a/ui/packages/catalog-ui-search/src/main/webapp/component/tabs/tabs.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/tabs/tabs.less
@@ -118,12 +118,10 @@
     margin-top: 1px;
     height: ~'calc(100% - @{minimumButtonSize})';
     background: inherit;
+    overflow: auto;
 
     > * {
       margin-top: 1px;
-    }
-    > div {
-      height: 100%;
     }
   }
 }
