--- a/ui/packages/catalog-ui-search/src/main/webapp/component/golden-layout/golden-layout.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/golden-layout/golden-layout.hbs
@@ -11,17 +11,16 @@
  *
  **/
  --}}
-<div class="empty-add-visualization"></div>
 <div class="golden-layout-container">
 
 </div>
 <div class="golden-layout-toolbar">
     <span></span>
     <div class="toolbar-actions">
-        <div class="to-add" title="Add visualization" data-help="Add a new visualization tab to the current view. Using a variety of visualizations can help when looking at results.">
-        </div><button class="is-button to-toggle-size" title="Toggle Toolbar Size" data-help="Toggle Toolbar Size">
+        <button class="is-button to-toggle-size" title="Toggle Toolbar Size" data-help="Toggle Toolbar Size">
             <span class="fa fa-chevron-down"></span>
             <span class="fa fa-chevron-up"></span>
         </button>
     </div>
 </div>
+<div class="empty-add-visualization"></div>
