[2.19.x] DDF-UI-261 Add control to add a new visual tab from the tabs similar to a browser (#6162)

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/golden-layout/golden-layout.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/golden-layout/golden-layout.less
@@ -4,6 +4,10 @@
     display: none;
   }
 
+  .empty-add-visualization {
+    display: none;
+  }
+
   .lm_maximised .lm_header,
   .lm_goldenlayout,
   .lm_item,
@@ -308,20 +312,14 @@
     .to-toggle-size:hover > span {
       opacity: 1;
     }
-
-    .to-add .dropdown-label {
-      display: none;
-    }
-
-    .to-toggle-size,
-    .to-add {
+    .to-toggle-size {
       background: inherit;
       .dropshadow;
     }
   }
 
   > .golden-layout-container {
-    height: ~'calc(99.5%)';
+    height: ~'calc(100%)';
   }
 }
 
@@ -331,14 +329,12 @@
 
 @{customElementNamespace}golden-layout.is-empty {
   // might be useful to make it clearer to the user in the future when they're in this mode
-}
-
-//interim styles (delete me later, after we add layout switching etc.)
-@{customElementNamespace}golden-layout.is-minimised {
-  > .golden-layout-toolbar {
-    .to-add .dropdown-label {
-      display: inline !important;
-    }
+  .empty-add-visualization {
+    display: block;
+    width: @minimumButtonSize;
+    position: absolute;
+    left: 0;
+    top: 0;
   }
 }
 
