Revert "[2.19.x] DDF-UI-261 Add control to add a new visual tab from the tabs similar to a browser (#6162)"
This reverts commit 2ab7f86813c4a1c1d33ff7248b20b918e6aacdb5.

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/visualization-selector/dropdown.visualization-selector.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/dropdown/visualization-selector/dropdown.visualization-selector.hbs
@@ -11,4 +11,8 @@
  *
  **/
  --}}
-<span class="dropdown-icon fa fa-plus"></span>
+<span class="dropdown-label">
+    Add Visual
+</span>
+<span class="dropdown-icon fa fa-television">
+</span>
