Update styling for save/cancel buttons in search and result forms

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.less
@@ -17,23 +17,26 @@
   }
 
   .editor-footer {
-    margin-top: @largeSpacing;
     height: @minimumButtonSize;
     white-space: nowrap;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: @mediumSpacing;
+    padding-right: @minimumSpacing;
 
     > button {
       height: 100%;
       display: inline-block;
+      padding-left: @minimumSpacing;
+      padding-right: @minimumSpacing;
     }
     > .editor-edit {
       width: 100%;
     }
     > .editor-cancel {
-      width: 50%;
       display: none;
     }
     > .editor-save {
-      width: 50%;
       display: none;
     }
   }
