--- a/ui/packages/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.hbs
@@ -22,26 +22,25 @@
     </div>
     <div class="editor-footer">
         <button class="editor-edit is-primary">
-        <span class="fa fa-pencil">
-
-        </span>
-        <span>
-            Edit
-        </span>
-        </button><!--
-        --><button class="editor-cancel is-negative" type="button">
-         <span class="fa fa-times">
-         </span>
-        <span>
-            Cancel
-        </span>
-        </button><!--
+            <span class="fa fa-pencil">
+            </span>
+            <span>
+                Edit
+            </span>
+        </button>
+        <!--
+        --><button class="editor-cancel" type="button">
+            <span>
+                Cancel
+            </span>
+        </button>
+        <!--
         --><button class="editor-save is-positive" type="submit">
-         <span class="fa fa-floppy-o">
-         </span>
-        <span>
-            Save
-        </span>
+            <span class="fa fa-floppy-o">
+            </span>
+            <span>
+                Save
+            </span>
         </button>
     </div>
 </form>
