Address comments + styling fixes

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.hbs
@@ -14,10 +14,8 @@
 <form target="autocomplete" action="/search/catalog/blank.html" novalidate>
     <div class="editor-properties">
         <div class="query-advanced">
-
         </div>
         <div class="query-settings">
-
         </div>
     </div>
     <div class="editor-footer">
@@ -28,14 +26,12 @@
                 Edit
             </span>
         </button>
-        <!--
-        --><button class="editor-cancel" type="button">
+        <button class="editor-cancel" type="button">
             <span>
                 Cancel
             </span>
         </button>
-        <!--
-        --><button class="editor-save is-positive" type="submit">
+        <button class="editor-save is-positive" type="submit">
             <span class="fa fa-floppy-o">
             </span>
             <span>
