--- a/ui/packages/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/query-advanced/query-advanced.less
@@ -11,18 +11,18 @@
   .editor-properties {
     display: inline-block; // do not change back to block, fixes scrolling / repaint issues in IE10 / IE11
     width: 100%;
+    height: 100%;
     overflow: auto;
-    max-height: ~'calc(100% - 2*@{minimumButtonSize})';
-    padding: @minimumSpacing @minimumSpacing 0px @minimumSpacing;
+    max-height: ~'calc(100% - @{minimumButtonSize} - 3 * @{minimumSpacing})';
+    padding: @minimumSpacing;
   }
 
   .editor-footer {
-    height: @minimumButtonSize;
-    white-space: nowrap;
     display: flex;
     justify-content: flex-end;
-    margin-top: @mediumSpacing;
-    padding-right: @minimumSpacing;
+    margin: @minimumSpacing;
+    height: @minimumButtonSize;
+    white-space: nowrap;
 
     > button {
       height: 100%;
