--- a/ui/packages/catalog-ui-search/src/main/webapp/component/result-form/result-form.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/result-form/result-form.hbs
@@ -26,28 +26,25 @@
     </div>
     <div class="editor-footer">
         {{#unless readOnly}}
-        <button class="editor-edit is-primary">
-            <span class="fa fa-pencil">
-
-            </span>
-            <span>
-                Edit
-            </span>
-        </button>
-        <!--
-        --><button class="editor-cancel" type="button">
-            <span>
-                Cancel
-            </span>
-        </button>
-        <!--
-        --><button class="editor-save is-positive" type="submit">
-            <span class="fa fa-floppy-o">
-            </span>
-            <span>
-                Save
-            </span>
-        </button>
+            <button class="editor-edit is-primary">
+                <span class="fa fa-pencil">
+                </span>
+                <span>
+                    Edit
+                </span>
+            </button>
+            <button class="editor-cancel" type="button">
+                <span>
+                    Cancel
+                </span>
+            </button>
+            <button class="editor-save is-positive" type="submit">
+                <span class="fa fa-floppy-o">
+                </span>
+                <span>
+                    Save
+                </span>
+            </button>
         {{/unless }}
     </div>
 </form>
