--- a/ui/packages/catalog-ui-search/src/main/webapp/component/result-form/result-form.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/result-form/result-form.less
@@ -14,7 +14,7 @@
     display: inline-block; // do not change back to block, fixes scrolling / repaint issues in IE10 / IE11
     width: 100%;
     overflow: auto;
-    max-height: ~'calc(100% - @{minimumButtonSize})';
+    max-height: ~'calc(100% - @{minimumButtonSize} - 2 * @{minimumSpacing})';
     padding: 10px 10px;
   }
 
