--- a/ui/packages/catalog-ui-search/src/main/webapp/component/result-form/result-form.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/result-form/result-form.less
@@ -14,7 +14,7 @@
     display: inline-block; // do not change back to block, fixes scrolling / repaint issues in IE10 / IE11
     width: 100%;
     overflow: auto;
-    max-height: ~'calc(100% - @{minimumButtonSize})';
+    max-height: ~'calc(100% - @{minimumButtonSize} - 2 * @{minimumSpacing})';
     padding: 10px 10px;
   }
 
@@ -23,23 +23,25 @@
     left: 0;
     right: 0;
     bottom: 0;
-    margin-top: @minimumSpacing;
+    display: flex;
+    justify-content: flex-end;
+    margin: @minimumSpacing;
     height: @minimumButtonSize;
     white-space: nowrap;
 
     > button {
       height: 100%;
       display: inline-block;
+      padding-left: @minimumSpacing;
+      padding-right: @minimumSpacing;
     }
     > .editor-edit {
       width: 100%;
     }
     > .editor-cancel {
-      width: 50%;
       display: none;
     }
     > .editor-save {
-      width: 50%;
       display: none;
     }
   }
