Support enterprise and per source search in Search UI

--- a/catalog/search-ui/src/main/resources/static/css/search.css
+++ b/catalog/search-ui/src/main/resources/static/css/search.css
@@ -2,6 +2,12 @@
     margin-top: 0.4rem;
 }
 
+.col > select {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 td {
     overflow: clip;
     text-overflow: ellipsis;
